--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Variables and Outputs</h1>
     </header>
     <main>
-        <p id="number">0</p>
+        <p id="showNumber">0</p>
         <section>
             <button id="btn-increment">&plus;</button>
             <button id="btn-decrement">&minus;</button>
